--- a/tokyo_olympic_data_transformation.ipynb
+++ b/tokyo_olympic_data_transformation.ipynb
@@ -52,9 +52,9 @@
     "configs = {\n",
     "    \"fs.azure.account.auth.type\": \"OAuth\",\n",
     "    \"fs.azure.account.oauth.provider.type\": \"org.apache.hadoop.fs.azurebfs.oauth2.ClientCredsTokenProvider\",\n",
-    "    \"fs.azure.account.oauth2.client.id\": \"8e9ef051-92ce-4207-896f-bbbfc1b6da85\",\n",
-    "    \"fs.azure.account.oauth2.client.secret\": \"7zK8Q~ozUHh1-QLSF0ynx8m4-XJu_A-wUrp6ecYj\",\n",
-    "    \"fs.azure.account.oauth2.client.endpoint\": \"https://login.microsoftonline.com/07207adc-95e0-48ee-98b8-5dbdafeb4c85/oauth2/token\"\n",
+    "    \"fs.azure.account.oauth2.client.id\": \"<client-id>\",\n",
+    "    \"fs.azure.account.oauth2.client.secret\": \"<secret-value>\",\n",
+    "    \"fs.azure.account.oauth2.client.endpoint\": \"https://login.microsoftonline.com/<tenant-id>/oauth2/token\"\n",
     "}\n",
     "\n",
     "dbutils.fs.mount(\n",
